--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -34,7 +34,7 @@
             <div>
               <%= current_store.name %>,
               Cambridgshire<br/>
-              Great Britail
+              Great Britain
             </div>
             <div>Call us now: +44 (0)2039061201</div>
             <% if current_store.mail_from_address %>
