--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -33,7 +33,7 @@
           <div class="d-flex flex-column align-items-center align-items-xl-start pb-3 flex-grow-2 footer-spree-contact-note">
             <div>
               <%= current_store.name %>,
-              Cambridgshire<br/>
+              Cambridgeshire<br/>
               Great Britain
             </div>
             <div>Call us now: +44 (0)2039061201</div>
