--- a/app/views/spree/shared/_head.html.erb
+++ b/app/views/spree/shared/_head.html.erb
@@ -1,11 +1,13 @@
 <title><%= title %></title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<%== meta_image_data_tag %>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<%== og_meta_data_tags %>
 <%== meta_data_tags %>
+<%== meta_robots %>
 <%= canonical_tag(current_store.url) %>
 <%= favicon_link_tag 'favicon.ico' %>
 <%= stylesheet_link_tag 'spree/frontend/all', media: 'screen', 'data-turbolinks-track': 'reload' %>
 <%= csrf_meta_tags %>
 <%= render 'spree/shared/paths' %>
+<%= render 'spree/shared/locale_and_currency' %>
 <%= javascript_include_tag 'spree/frontend/all', defer: true, 'data-turbolinks-track': 'reload' %>
 <%= yield :head %>
